org.polymap.core.feature   - adopt stagerap deploy container (no bin/plugins dir)   - API changes in Polymap, StatusDispatcher, UIUtils